msa/hands-on/microSvc1_istio/500-micro-svc-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-micro-svc-1
  labels:
    appName: herasoo
    svcName: micro-svc-1
    version: v1
spec:
  #type: NodePort
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  #clusterIP: None
  selector:
    appName: herasoo
    svcName: micro-svc-1
