msa/hands-on/microSvc1_istio/510-micro-svc-1-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destionationrule-micro-svc-1
  labels:
    appName: herasoo
    svcName: micro-svc-1
    version: v1
spec:
  host: service-micro-svc-1
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
        connectTimeout: 1s
      http:
        #http1MaxPendingRequests: 1 # default 1024
        #http2MaxRequests: 1 # default 1024
        #maxRequestsPerConnection: 1
        #maxRetries: 3  # default 3
    outlierDetection:
      consecutiveErrors: 20
      interval: 10s
      baseEjectionTime: 15s
      maxEjectionPercent: 100
    tls:
      mode: ISTIO_MUTUAL
